# mpc_local_planner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install_acados.sh  install_ipopt.sh  package.xml
acados/: acados_ocp_bicycle_model.json  curvature.py  energyBicycleModel.py  energyMPC.py  genCode.py  main.py  mainEnergy.py  model.py  mpc.py  mpcPathTracking.py  mpcPointStab.py  plotFnc.py  runMpc.py  time2spatial.py  trackLength.py  updateArray.py
acados/c_generated_code/: Makefile  acados_sim_solver_bicycle_model.c  acados_sim_solver_bicycle_model.h  acados_solver.pxd  acados_solver_bicycle_model.c  acados_solver_bicycle_model.h  acados_solver_sfunction_bicycle_model.c  main_bicycle_model.c  main_sim_bicycle_model.c  make_sfun_bicycle_model.m
acados/c_generated_code/bicycle_model_cost/: bicycle_model_cost_y_0_fun.c  bicycle_model_cost_y_0_fun.h  bicycle_model_cost_y_0_fun_jac_ut_xt.c  bicycle_model_cost_y_0_hess.c  bicycle_model_cost_y_fun.c  bicycle_model_cost_y_fun.h  bicycle_model_cost_y_fun_jac_ut_xt.c  bicycle_model_cost_y_hess.c
acados/c_generated_code/bicycle_model_model/: bicycle_model_expl_ode_fun.c  bicycle_model_expl_vde_adj.c  bicycle_model_expl_vde_forw.c  bicycle_model_model.h
acados/mpcRaceCar/: BicycleModel.py  curvature.py  main.py  plotFnc.py  time2spatial.py  trackLength.py  updateArray.py
acados/path_tracking/: acados_ocp_path_tracking.json  mpcPathTracking.py
acados/path_tracking/c_generated_code/: Makefile  acados_sim_solver_path_tracking.c  acados_sim_solver_path_tracking.h  acados_solver.pxd  acados_solver_path_tracking.c  acados_solver_path_tracking.h  acados_solver_sfunction_path_tracking.c  main_path_tracking.c  main_sim_path_tracking.c  make_sfun_path_tracking.m
acados/path_tracking/c_generated_code/path_tracking_cost/: path_tracking_cost_y_0_fun.c  path_tracking_cost_y_0_fun.h  path_tracking_cost_y_0_fun_jac_ut_xt.c  path_tracking_cost_y_0_hess.c  path_tracking_cost_y_fun.c  path_tracking_cost_y_fun.h  path_tracking_cost_y_fun_jac_ut_xt.c  path_tracking_cost_y_hess.c
acados/path_tracking/c_generated_code/path_tracking_model/: path_tracking_expl_ode_fun.c  path_tracking_expl_vde_adj.c  path_tracking_expl_vde_forw.c  path_tracking_model.h
acados/point_stab/: acados_ocp_point_stab.json  mpcPointStab.py
acados/point_stab/c_generated_code/: Makefile  acados_sim_solver_point_stab.c  acados_sim_solver_point_stab.h  acados_solver.pxd  acados_solver_point_stab.c  acados_solver_point_stab.h  acados_solver_sfunction_point_stab.c  main_point_stab.c  main_sim_point_stab.c  make_sfun_point_stab.m
acados/point_stab/c_generated_code/point_stab_constraints/: point_stab_constr_h_fun.c  point_stab_constr_h_fun_jac_uxt_zt.c  point_stab_h_constraint.h
acados/point_stab/c_generated_code/point_stab_cost/: point_stab_cost_y_0_fun.c  point_stab_cost_y_0_fun.h  point_stab_cost_y_0_fun_jac_ut_xt.c  point_stab_cost_y_0_hess.c  point_stab_cost_y_fun.c  point_stab_cost_y_fun.h  point_stab_cost_y_fun_jac_ut_xt.c  point_stab_cost_y_hess.c
acados/point_stab/c_generated_code/point_stab_model/: point_stab_expl_ode_fun.c  point_stab_expl_vde_adj.c  point_stab_expl_vde_forw.c  point_stab_model.h
c++/: curvature.cpp
config/: mpc_params.yaml  mpc_viz.rviz  real.yaml  sim.yaml
include/mpc_local_planner/: AcadosPathTracking.h  AcadosPointStab.h  AcadosSolver.h  BezierCurve.h  ControlSys.h  CppADMPC.h  MPC.h  ParkingSys.h  PathTrackingSys.h  RosMpc.h  bounds.h  constants.h  solverAcados.h  solverCppAD.h  types.h  utilities.h
include/mpc_local_planner/TrajectoryTracking/: TrajectoryMPC.h
launch/: mpc.launch  mpc.launch.py  mpc.xml  rviz.launch  rviz.launch.py  rviz.xml  testMpc.launch
params/: mpc.yaml  real.yaml  sim.yaml
rviz/: mpc_ros2.rviz  mpc_viz.rviz  test_mpc_viz.rviz
src/: AcadosPathTracking.cpp  AcadosPointStab.cpp  AcadosSolver.cpp  BezierCurve.cpp  ControlSys.cpp  CppADMPC.cpp  MPC.cpp  ParkingSys.cpp  PathTrackingSys.cpp  RosMpc.cpp  bounds.cpp  main.cpp  solverAcados.cpp  solverCppAD.cpp  types.cpp  utilities.cpp
src/TrajectoryTracking/: TrajectoryMPC.cpp
tests/: main.cpp  testBounds.h  testMpc.h  timing.h
urdf/: box.urdf
