<?xml version="1.0"?>
<package format="2">
  <name>mpc_local_planner</name>
  <version>0.0.0</version>
  <description>mpc for a autonomous car</description>
  <maintainer email="torbras@stud.ntnu.no">Tor Børve Rasmussen</maintainer>
  <license>MIT</license>
  <url type="gitlab">https://gitlab.stud.iie.ntnu.no/fuelfighter/autonomous/planning-control/mpc_local_planner</url>
  <url type="github">https://github.com/TorBorve/mpc_local_planner</url>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
