<?xml version="1.0"?>
<package format="2">
  <name>mpc_local_planner</name>
  <version>0.0.0</version>
  <description>mpc for a autonomous car</description>
  <maintainer email="torbras@stud.ntnu.no">Tor Børve Rasmussen</maintainer>
  <license>MIT</license>
  <url type="gitlab">https://gitlab.stud.iie.ntnu.no/fuelfighter/autonomous/planning-control/mpc_local_planner</url>
  <url type="github">https://github.com/TorBorve/mpc_local_planner</url>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>rclcpp</depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
